	* file-io.c: add support for alternate data sources 
	  (e.g. sql work being done by Thomas Lang?s)

	* file-io.c: add support for showing task memo in main 
	  window

Wed Sep 19 10:17:58 CDT 2001  Linas Vepstas <linas@linas.org>

	* xml-read.c: changes to minimize likelyhood of loss
	  of data if some weird i/o error occurs.

Thu Sep 13 13:11:19 CDT 2001  Linas Vepstas <linas@linas.org>

	* prefs.[ch], options.c: transition user preferences
	  dialog to glade dialog
	* *.[ch]: misc multiple bug fixes

Mon Sep 10 14:29:50 CDT 2001  Linas Vepstas <linas@linas.org>

	* idle-timer.[ch], timers.c: detect system idleness, 
	  stop current project after an inactivity timeout.
	* ctree.c: make the arrow keys, the enter key work.
	* journal.c, proj.c: implement cut & paste of memos 
	  in the journal report.

Sat Sep  8 13:05:24 CDT 2001  Linas Vepstas <linas@linas.org>

	* phtml.[ch], ghtml.[ch], journal.c: reimplement reports 
	  with guile interpreter.
	* ghtml.c: provide configurable column titles.
	* journal.c: i18n'ize the paths to the reports

Fri Sep  7 10:51:53 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: misc bug fxes

Tue Sep  4 23:43:02 CDT 2001  Linas Vepstas <linas@linas.org>

	* phtml.c: provide support for configurable report layout,
	  add invoice creation.

	* plug-in.[ch], plugin.glade: define a simple GUI to allow
	  users to add new, user-defined reports.

Tue Sep 04 01:15:32 2001  George Lebl <jirka@5z.com>

	* main.c: Have the "unstable" warning mention release 1.4.0.2 since
	  I'm making 1.4.0.99 so it'd be good to tell users about a version
	  number rather then just a cvs date


Mon Sep  3 22:01:48 CDT 2001  Linas Vepstas <linas@linas.org>

	* proj.c: important little bug fix.

	* proj.c: implement auto-merge of intervals

	* proj.c, journal.c: add ability to insert new 
	  memos into journal.

	* journal.c: add ability to save html to file.

Mon Sep 03 06:15:08 2001  George Lebl <jirka@5z.com>
