@@ -1,3 +1,8 @@
+	* err-throw.c: add canonical error messages 
+
+	* main.c: modify order of intialization, in prep for 
+	  SQL and other data sources.
+
 	* file-io.c: add support for alternate data sources 
 	  (e.g. sql work being done by Thomas Lang?s)
 
